<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/buttons_table"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="24dp"
    android:layout_marginBottom="24dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <TableRow
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_clear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:text="@string/sign_clear"
            android:textColor="@color/brown_red"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_bracketOpen"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:tag="bracketOpen"
            android:text="@string/sign_bracketOpen"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_bracketClose"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:tag="bracketClose"
            android:text="@string/sign_bracketClose"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_div"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:tag="div"
            android:text="@string/sign_div"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

    </TableRow>

    <TableRow
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_num_7"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-light"
            android:tag="7"
            android:text="@string/num_7"
            android:textColor="@color/gray"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_num_8"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-light"
            android:tag="8"
            android:text="@string/num_8"
            android:textColor="@color/gray"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_num_9"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-light"
            android:tag="9"
            android:text="@string/num_9"
            android:textColor="@color/gray"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_mul"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:tag="mul"
            android:text="@string/sign_mul"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

    </TableRow>

    <TableRow
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_num_4"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-light"
            android:tag="4"
            android:text="@string/num_4"
            android:textColor="@color/gray"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_num_5"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-light"
            android:tag="5"
            android:text="@string/num_5"
            android:textColor="@color/gray"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_num_6"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-light"
            android:tag="6"
            android:text="@string/num_6"
            android:textColor="@color/gray"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_sub"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:tag="sub"
            android:text="@string/sign_sub"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

    </TableRow>

    <TableRow
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_num_1"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-light"
            android:tag="1"
            android:text="@string/num_1"
            android:textColor="@color/gray"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_num_2"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-light"
            android:tag="2"
            android:text="@string/num_2"
            android:textColor="@color/gray"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_num_3"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-light"
            android:tag="3"
            android:text="@string/num_3"
            android:textColor="@color/gray"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_add"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:tag="add"
            android:text="@string/sign_add"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

    </TableRow>

    <TableRow
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_switchSign"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:tag="switchSign"
            android:text="@string/sign_switchSign"
            android:textColor="@color/blue"
            android:textSize="30sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_num_0"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:fontFamily="sans-serif-light"
            android:tag="0"
            android:text="@string/num_0"
            android:textColor="@color/gray"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_point"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/light_gray_blue"
            android:backgroundTintMode="src_over"
            android:tag="point"
            android:text="@string/sign_point"
            android:textColor="@color/blue"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/purple_blue" />

        <Button
            android:id="@+id/btn_eq"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="7dp"
            android:width="70dp"
            android:height="70dp"
            android:backgroundTint="@color/blue"
            android:backgroundTintMode="src_over"
            android:tag="eq"
            android:text="@string/sign_eq"
            android:textColor="@color/light_yellow"
            android:textSize="36sp"
            app:cornerRadius="20dp"
            app:rippleColor="@color/gray_yellow" />

    </TableRow>


</TableLayout>